[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/level_gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/target.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/square.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/message.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource/name = "New Anim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("walls:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("targets:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("squares:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "New Anim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("walls:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("targets:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }
tracks/2/type = "value"
tracks/2/path = NodePath("squares:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[node name="level_1" type="Node"]

script/script = ExtResource( 1 )

[node name="level_gui" parent="." instance=ExtResource( 2 )]

[node name="walls" type="Node2D" parent="."]

[node name="targets" type="Node2D" parent="."]

[node name="target" parent="targets" instance=ExtResource( 3 )]

transform/pos = Vector2( 480.479, 200 )

[node name="squares" type="Node2D" parent="."]

[node name="square" parent="squares" instance=ExtResource( 4 )]

transform/pos = Vector2( 242.916, 200 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 1 )
playback/active = false
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer_start" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 2 )
playback/active = false
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="message" parent="." instance=ExtResource( 5 )]

margin/left = 285.0
margin/top = 387.0
margin/right = 285.0
margin/bottom = 387.0
message = "Swipe the circle torwards the hole!"

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="finished" from="AnimationPlayer_start" to="." method="_on_AnimationPlayer_start_finished"]


